[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Zombie.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies/zombie_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://fonts/nightmare_outline.tres" type="DynamicFont" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 22, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 22, 0, 22, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 44, 0, 22, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 66, 0, 22, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "walk",
"speed": 3.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.17555, 5.99311 )

[node name="Zombie" type="Node2D"]
script = ExtResource( 1 )
max_term = 5

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 5 )
animation = "walk"
frame = 1
playing = true

[node name="ZLayer" type="Node2D" parent="."]
position = Vector2( -20, -51 )
z_index = 50

[node name="Equation" type="Label" parent="ZLayer"]
anchor_right = 0.5
margin_right = 40.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 3 )
text = "9 + 3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Surge_delay_timer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="Overkill_timer" type="Timer" parent="."]
one_shot = true

[node name="Target" type="Position2D" parent="."]
position = Vector2( 3, -10 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 3, -10 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="timeout" from="Surge_delay_timer" to="." method="_on_Surge_timer_timeout"]
[connection signal="timeout" from="Overkill_timer" to="." method="_on_Overkill_timer_timeout"]
